--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,20 +1,8 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
-  display: flex;
-  padding: 8px;
-  justify-content: space-evenly;
 }
 
-.left-links {
-  display: flex;
-  margin-right: 300px;
-}
-
-.right-links {
-  display: flex;
-  margin-left: 300px;
-}
 
 .logo {
   font-size: 48px;
@@ -22,15 +10,11 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  display: flex;
 }
 
 li {
@@ -45,19 +29,16 @@ a {
   text-decoration: none;
 }
 
-
-/* suggested solution */
-
-/* .header {
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 ul {
   display: flex;
-  margin: 0;
-  padding: 0;
-  gap: 8px;
-} */
+  padding-left: 0;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin: 8px auto;
+}
