--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,32 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.top-items {
+  display: flex;
+  justify-content: space-around;
+}
+
+.header {
+  flex-shrink: 2;
+  margin: auto 0;
+}
+
+.icon, .close-button {
+  margin: auto 0;
+}
+
+.text {
+  max-width: 450px;
+  margin: 0 10px 10px 10%;
+  /* margin-left: 10%;
+  margin-bottom: 10px; */
+  padding: 8px;
+}
+
+.bottom-items {
+  display: flex;
+  margin-bottom: 10px;
+  gap: 8px;
+  margin-left: 12%;
+}
