--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,56 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* Solution */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  padding: 8px;
+}
+
+.header, .footer {
+  display: flex;
+}
+
+.right-links {
+  margin-left: auto;
+}
+
+.left-links {
+  padding-left: 0;
+}
+
+.content, .input {
+  display: grid;
+  place-content: center;
+}
+
+.content {
+  margin: auto;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  margin: 8px;
+  padding: 8px;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
