--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,67 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* Solution */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  /* text-align: start; */
+  align-items: center;
+}
+
+.header-text {
+  padding: 16px;
+}
+
+.content {
+  display: flex;
+}
+
+.sidebar {
+  padding: 16px;
+  min-width: 300px;
+}
+
+ul, a {
+  color: white;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 32px;
+  background-color: red;
+}
+
+.card {
+  display: flex;
+  width: 300px;
+  height: 300px;
+  flex-wrap: wrap;
+  padding: 16px;
+  background-color: blue;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
